--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -13,4 +13,16 @@
     <string name="skip">Skip</string>
     <string name="login">Login</string>
     <string name="signup">Signup</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_profile">User Profile</string>
+    <string name="user_name">Faserecon</string>
+    <string name="user_email">Fasrecon@email.com</string>
+    <string name="profile_settings">Profile Settings</string>
+    <string name="language">Language</string>
+    <string name="notification">Notification</string>
+    <string name="logout">Logout</string>
+    <string name="log_out">Log out</string>
+    <string name="cancel_setting">Cancel</string>
+    <string name="title_profile">Profile</string>
 </resources>
