fix: login page layout

--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -30,13 +30,12 @@
     <string name="username">Username</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="lupa_password">Lupa Password?</string>
-    <string name="log_in">Log In</string>
+    <string name="forgot_password1">Forgot Password ?</string>
     <string name="masuk">Masuk</string>
-    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
+    <string name="dont_have_account">Don\'t have an account yet ?</string>
     <string name="sign_up">Sign Up</string>
     <string name="sudah_punya_akun_login">Sudah punya akun? Login</string>
-    <string name="daftar">Daftar</string>
+    <string name="register">Register</string>
     <string name="apakah_anda_menyetujui_term_kami">Apakah anda menyetujui term kami</string>
     <string name="new_password">New Password</string>
     <string name="ubah">Ubah</string>
