--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
     <string name="jenis_kelamin">Jenis Kelamin</string>
     <string name="forgot_password">Forgot Password</string>
     <string name="logout_message">Apakan anda yakin ingin keluar?</string>
+    <string name="my_outfit">My Outfit</string>
+    <string name="chatbot">Chatbot</string>
 </resources>
