--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="date">Date</string>
     <string name="jenis_kelamin">Jenis Kelamin</string>
     <string name="forgot_password">Forgot Password</string>
-    <string name="logout_message">Apakan anda yakin ingin keluar?</string>
+    <string name="logout_message">Apakah anda yakin ingin keluar ?</string>
     <string name="submit">Submit</string>
     <string name="Placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
     <string name="logout_alert">Logout</string>
