--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="user_name">Faserecon</string>
     <string name="user_email">Fasrecon@email.com</string>
     <string name="profile_settings">Profile Settings</string>
-    <string name="language">Language</string>
+    <string name="language">Language Settings</string>
     <string name="notification">Notification</string>
     <string name="logout">Logout</string>
     <string name="log_out">Log out</string>
@@ -72,6 +72,12 @@
     <string name="cancel">Cancel</string>
     <string name="apply">Apply</string>
     <string name="filter">Filter</string>
+    <string name="settings">Settings</string>
+    <string name="profile_settings_icon">Profile Settings Icon</string>
+    <string name="language_settings_icon">Language Settings Icon</string>
+    <string name="profile_settings_arrow">Settings Arrow</string>
+    <string name="notification_settings_icon">Notification Settings Icon</string>
+    <string name="logout_icon">Logout Icon</string>
     <string-array name="gender_array">
         <item>Laki-laki</item>
         <item>Perempuan</item>
