fix: toolbar on all fragments

--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -83,6 +83,8 @@
     <string name="gallery">Gallery</string>
     <string name="no_image">No Image Selected</string>
     <string name="failed_take_photo">Failed to take a photo</string>
+    <string name="image_profile_settings">Image Profile Settings</string>
+    <string name="change_password">Change Password</string>
     <string-array name="gender_array">
         <item>Laki-laki</item>
         <item>Perempuan</item>
