Feat: Adding splash Screen

--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="change_password">Change Password</string>
     <string name="current_password">Current Password</string>
     <string name="new_password_format">*Your new password must be at least\n \ 8 characters</string>
+    <string name="fasrecon">Fasrecon</string>
     <string-array name="gender_array">
         <item>Laki-laki</item>
         <item>Perempuan</item>
