--- a/Mobile Development/app/src/main/res/values-en-rGB/strings.xml
+++ b/Mobile Development/app/src/main/res/values-en-rGB/strings.xml
@@ -90,6 +90,9 @@
     <string name="english_uk">English (UK)</string>
     <string name="indonesia">Indonesia</string>
     <string name="save_settings">Save Settings</string>
+    <string name="new_chat">New Chat</string>
+    <string name="open_the_chat">Open the chat</string>
+    <string name="history_chatbot">History Chatbot</string>
     <string-array name="gender_array">
         <item>Man</item>
         <item>Woman</item>
