--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -92,6 +92,8 @@
     <string name="save_settings">Save Settings</string>
     <string name="new_chat">New Chat</string>
     <string name="open_the_chat">Open the chat</string>
+    <string name="history_chatbot">History Chatbot</string>
+    <string name="user_image">User Image</string>
     <string-array name="gender_array">
         <item>Man</item>
         <item>Woman</item>
