--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -94,6 +94,7 @@
     <string name="open_the_chat">Open the chat</string>
     <string name="history_chatbot">History Chatbot</string>
     <string name="user_image">User Image</string>
+    <string name="type_here">Type Here</string>
     <string-array name="gender_array">
         <item>Man</item>
         <item>Woman</item>
