--- a/Mobile Development/app/src/main/res/values-in/strings.xml
+++ b/Mobile Development/app/src/main/res/values-in/strings.xml
@@ -33,7 +33,7 @@
     <string name="enter">Masuk</string>
     <string name="dont_have_account">Belum punya akun?</string>
     <string name="sign_up">Daftar</string>
-    <string name="already_have_an_account">Sudah punya akun? Login</string>
+    <string name="already_have_an_account">Sudah punya akun?</string>
     <string name="register">Register</string>
     <string name="do_you_agree_with_our_terms">Apakah anda menyetujui term kami</string>
     <string name="new_password">Password Baru</string>
