--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -99,6 +99,9 @@
     <string name="no_internet">No Internet Connection</string>
     <string name="email_registered">Email has been registered</string>
     <string name="unknown_error">Unknown Error</string>
+    <string name="wrong_email_password">Email or password is incorrect</string>
+    <string name="invalid_user">Account not registered yet</string>
+    <string name="too_many_request">Too many login requests, please try again later.</string>
     <string-array name="gender_array">
         <item>Man</item>
         <item>Woman</item>
