--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -103,6 +103,8 @@
     <string name="invalid_user">Account not registered yet</string>
     <string name="too_many_request">Too many login requests, please try again later.</string>
     <string name="session_expired">Session Expired, please login again !</string>
+    <string name="change_image">change image</string>
+    <string name="failed_update_login_again">Failed to update your profile, please login again</string>
     <string-array name="gender_array">
         <item>Man</item>
         <item>Woman</item>
