--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -105,6 +105,7 @@
     <string name="session_expired">Session Expired, please login again !</string>
     <string name="change_image">change image</string>
     <string name="failed_update_login_again">Failed to update your profile, please login again</string>
+    <string name="current_password_incorrect">Your current password is incorrect</string>
     <string-array name="gender_array">
         <item>Man</item>
         <item>Woman</item>
