--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -119,4 +119,6 @@
     <string name="create_account_failed">Create Account Failed\n %1$s</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
