--- a/Mobile Development/app/src/main/res/values-in/strings.xml
+++ b/Mobile Development/app/src/main/res/values-in/strings.xml
@@ -3,57 +3,39 @@
     <string name="title_home">Home</string>
     <string name="title_menu_1">Rekomendasi Pakaian</string>
     <string name="onboarding_page_image">Gambar Onboarding Page</string>
-    <string name="description_menu_1">Deskripsi menu 1</string>
+    <string name="description_menu_1">Dapatkan Rekomendasi pakaian berdasarkan chatbot</string>
     <string name="title_menu_2">Terintegrasi Machine Learning</string>
-    <string name="description_menu_2">Deskripsi menu 2</string>
+    <string name="description_menu_2">terintegrasi machine learning dengan akurasi tinggi</string>
     <string name="title_menu_3">Mengelola pakaian Dengan Mudah</string>
     <string name="description_menu_3">Deskripsi menu 3</string>
     <string name="skip">Lewati</string>
     <string name="login">Login</string>
     <string name="signup">Daftar</string>
     <string name="user_profile">Profil Pengguna</string>
-    <string name="user_name">Faserecon</string>
-    <string name="user_email">Fasrecon@email.com</string>
     <string name="profile_settings">Pengaturan Profil</string>
     <string name="language">Pengaturan Bahasa</string>
-    <string name="notification">Notifikasi</string>
     <string name="logout">Keluar</string>
     <string name="log_out">Keluar</string>
     <string name="cancel_settings">Batalkan</string>
     <string name="profile">Profil</string>
-    <string name="input_username">Masukkan Username</string>
     <string name="username">Username</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="field_email">Email tidak boleh kosong</string>
     <string name="field_password">Kata sandi bidang tidak boleh kosong</string>
-    <string name="forgot_password1">Lupa Password ?</string>
     <string name="format_password">Kata sandi tidak boleh kurang dari 8 karakter</string>
     <string name="format_email">Format email salah</string>
-    <string name="enter">Masuk</string>
     <string name="dont_have_account">Belum punya akun?</string>
     <string name="sign_up">Daftar</string>
     <string name="already_have_an_account">Sudah punya akun?</string>
     <string name="register">Register</string>
-    <string name="do_you_agree_with_our_terms">Apakah anda menyetujui term kami</string>
     <string name="new_password">Password Baru</string>
-    <string name="change">Ubah</string>
-    <string name="date">Tanggal</string>
-    <string name="forgot_password">Lupa Password</string>
     <string name="logout_message">Apakah anda yakin ingin keluar ?</string>
-    <string name="submit">kirim</string>
-    <string name="Placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
     <string name="logout_alert">Keluar</string>
     <string name="name">Nama</string>
     <string name="save_profile">Simpan Profil</string>
     <string name="your_clothes_collection">Koleksi Pakaian Anda</string>
-    <string name="color">Warna</string>
-    <string name="type">Jenis</string>
-    <string name="clothes_name">Nama baju</string>
     <string name="field_username">Nama pengguna tidak boleh kosong\n</string>
-    <string name="field_gender">Jenis kelamin tidak boleh kosong</string>
-    <string name="field_date">Bidang Tanggal tidak boleh kosong</string>
-    <string name="field_checkbox">harap setujui persyaratan\n</string>
     <string name="my_clothes">Pakaianku</string>
     <string name="chatbot">Chatbot</string>
     <string name="hai_user">Hai, %1$s</string>
@@ -69,11 +51,9 @@
     <string name="cancel">Batalkan</string>
     <string name="apply">Terapkan</string>
     <string name="filter">Filter</string>
-    <string name="settings">Pengaturan</string>
     <string name="profile_settings_icon">Ikon Pengaturan Profil</string>
     <string name="language_settings_icon">Ikon Pengaturan Bahasa</string>
     <string name="profile_settings_arrow">Ikon Panah</string>
-    <string name="notification_settings_icon">Ikon Pengaturan Pemberitahuan</string>
     <string name="logout_icon">Ikon Keluar</string>
     <string name="add_new_clothes">Tambahkan Pakaian Baru</string>
     <string name="take_a_photo">Ambil Gambar</string>
@@ -82,6 +62,7 @@
     <string name="failed_take_photo">Gagal mengambil foto</string>
     <string name="image_profile_settings">Pengaturan Profil Gambar</string>
     <string name="change_password">Ubah Kata Sandi</string>
+    <string name="change_password_failed">Gagal mengubah kata sandi</string>
     <string name="current_password">Kata Sandi Saat Ini</string>
     <string name="new_password_format">*Kata sandi baru Anda minimal harus\n \ 8 karakter</string>
     <string name="fasrecon">Fasrecon</string>
@@ -92,26 +73,19 @@
     <string name="new_chat">Obrolan Baru</string>
     <string name="open_the_chat">Buka Obrolan</string>
     <string name="history_chatbot">History Chatbot</string>
-    <string name="user_image">Gambar pengguna</string>
     <string name="type_here">Ketik di sini</string>
     <string name="success_register">Berhasil membuat akun</string>
     <string name="no_internet">Tidak ada koneksi internet</string>
     <string name="email_registered">Email sudah didaftarkan</string>
-    <string name="unknown_error">Error tidak diketahui</string>
     <string name="wrong_email_password">Email atau kata sandi salah</string>
     <string name="invalid_user">Akun belum terdaftar</string>
     <string name="too_many_request">Terlalu banyak permintaan login, silahkan coba lagi nanti</string>
-    <string name="session_expired">Sesi Berakhir, silakan login lagi !</string>
-    <string name="change_image">Ubah gambar</string>
     <string name="failed_update_login_again">Gagal memperbarui profil, silahkan login lagi</string>
     <string name="current_password_incorrect">Kata sandi saat ini salah</string>
     <string name="delete_clothes">Hapus Pakaian</string>
     <string name="update_profil_failed">Gagal memperbarui foto profil</string>
-    <string name="change_password_failed">Gagal memperbarui kata sandi</string>
     <string name="try_again">Coba lagi</string>
-    <string name="change_password_success">Berhasil memperbarui kata sandi</string>
     <string name="login_failed">Gagal login</string>
-    <string name="login_success">Berhasil login</string>
     <string name="classify_image_failed">Gagal klasifikasi gambar</string>
     <string name="confirmation_delete">Apakah kamu yakin ingin menghapus pakaian ini ?</string>
     <string name="crop_image_failed">Gagal memangkas gambar</string>
@@ -119,4 +93,6 @@
     <string name="create_account_failed">Gagal Membuat Akun\n %1$s</string>
     <string name="yes">Ya</string>
     <string name="no">Tidak</string>
+    <string name="confirmation_delete_chat">Apakah kamu yakin ingin menghapus chat ini ?</string>
+    <string name="delete_chat">Hapus Chat</string>
 </resources>
